@@ -59,24 +59,22 @@ public class LockDuringDump {
 
         for (int i = 0; i < 3; i++) {
             // i = 0 -- dump without agent
-            // i = 1 -- dump with agent = disable BiasedLocking
-            // i = 2 -- dump with agent = enable BiasedLocking
+            // i = 1 -- dump with agent
 
             String agentArg   = (i == 0) ? "-showversion" : "-javaagent:" + agentJar;
             String agentArg2  = (i == 0) ? "-showversion" : "-XX:+AllowArchivingWithJavaAgent";
-            String biasedLock = (i != 2) ? "-showversion" : "-XX:+UseBiasedLocking";
 
             OutputAnalyzer out =
                 TestCommon.testDump(appJar, TestCommon.list(LockDuringDumpApp.class.getName()),
                                     "-XX:+UnlockDiagnosticVMOptions",
-                                    agentArg, agentArg2, biasedLock);
+                                    agentArg, agentArg2);
             if (i != 0) {
                 out.shouldContain("Let's hold the lock on the literal string");
             }
 
             TestCommon.run(
                 "-cp", appJar,
-                "-XX:+UnlockDiagnosticVMOptions", agentArg2, biasedLock,
+                "-XX:+UnlockDiagnosticVMOptions", agentArg2,
                 LockDuringDumpApp.class.getName())
               .assertNormalExit("I am able to lock the literal string");
         }
